--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>quiz</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
     <div id="wrapper">
         <div id="quiz">
             <p class="timer"></p>
-                <div class="question">
-                    <div class="options">
-                        <p class="option"></p>
-                        <p class="option"></p>
-                        <p class="option"></p>
-                        <p class="option"></p>
-                    </div>
-                </div>
-                <div id="score" class="hidden">
-                    <h1>Your score is <span></span></h1>
-                </div>
+            <p class="question"></p>
+            <div class="options">
+                <p class="option"></p>
+                <p class="option"></p>
+                <p class="option"></p>
+                <p class="option"></p>
             </div>
+
+            <button>Quiz start</button>
+
+        </div>
+        <div id="score" class="hidden">
+            <h1>Your score is <span></span></h1>
         </div>
     </div>
 
+
     <script src="script.js"></script>
 </body>
+
 </html>
